# chat-sample

./: README.md  dummy_data.sql  init.sql  mongodb.yaml  postgresdb.yaml  redis.yaml  skaffold.yaml
code/backend/: .env  Cargo.toml
code/backend/.sqlx/: query-0f3fd0bf2a96b2ba016dc5cfb9093a7d0480230c9593b553784186737db63d1b.json  query-220beaa3eb440cac34825e073d8fe3cf285373fec79ef1919a9440a0e235988c.json  query-c2e3461186afb619ef423d50402ef6ba2f467070af079382ec6ed5694874f920.json
code/backend/src/: main.rs
code/backend/src/api/: auth.rs  menu.rs  mod.rs  order.rs  restaurant_table.rs
code/backend/src/api/api_handler/: handlers.rs  mod.rs
code/backend/src/api/controller/: auth_controller.rs  mod.rs  sse_controller.rs  user_controller.rs
code/backend/src/api/jwt/: jwt.rs
code/backend/src/api/middleware/: jwt_middleware.rs
code/backend/src/api/redis/: mod.rs
code/backend/src/api/requests/: login_request.rs  mod.rs  publish_request.rs
code/backend/src/api/service/: order_service.rs
code/backend/src/db/: config.rs  mod.rs  pool.rs
code/backend/src/db/model/: menu.rs  mod.rs  order.rs  restaurant_table.rs  room.rs  room_user.rs  service.rs  user.rs
code/backend/src/db/repository/: user_repository.rs
code/frontend/: index.html
