[package]
name = "simple_restaurant_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.6"
actix-service = "2"
futures = "0.3"
# db
bb8 = "0.5"
bb8-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
postgres = "0.19"
tokio-postgres = "0.7"
# auth
jsonwebtoken = "7"
bcrypt = "0.10"
serde = { version = "1", features = ["derive"] }
# other, like json, logger
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
colored= "2"
rand = "0.8"
lazy_static = "1.4"
