[package]
name = "chat-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix = "0.13"
actix-web-actors = "4.3"
actix-web = "4.11"
actix-rt = "2.10"
actix-cors = "0.7"
actix-service = "2.0"
futures = "0.3"
futures-util = "0.3"

# db
deadpool-postgres = { version = "0.14" }
tokio-postgres = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
redis = { version = "0.31", features = [
    "tokio-comp",
    "aio",
    "cluster",
    "cluster-async",
] }

# auth
jsonwebtoken = "9.3"
bcrypt = "0.17"
serde = { version = "1", features = ["derive"] }

# other, like json, logger
lazy_static = "1.4"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
colored = "3.0"
rand = "0.9.1"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# google pubsub
google-cloud-pubsub = "0.30"
google-cloud-googleapis = "0.16"
